sandbox/output
OneHundredDoorsTest.java:8: error: cannot find symbol
        assertEquals("O", oneHundredDoors.afterLastPassStatesOfAllDoorsWhoseAmountIs(1));
                          ^
  symbol:   variable oneHundredDoors
  location: class OneHundredDoorsTest
1 error
